fix overflow

--- a/src/components/Footer/LogoSlider/LogoSlider.scss
+++ b/src/components/Footer/LogoSlider/LogoSlider.scss
@@ -21,7 +21,7 @@
 
 	&__container {
 		position: relative;
-		overflow-x: hidden;
+		overflow: hidden;
 		&::before,
 		&::after {
 			content: '';
